fix styles on mobile

--- a/client/src/scss/common.scss
+++ b/client/src/scss/common.scss
@@ -280,7 +280,8 @@
 	}
 
 	@media (max-width: $breakpoint-mobile) {
-		width: 90% !important;
+		width: 100% !important;
+    overflow: scroll;
 	}
 }
 
